--- a/t1t2.html
+++ b/t1t2.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Hlooo BE Computer!!! Welcome to the  Workshop of Git and GithubS
+    <h1>Hlooo BE Computer!!! Welcome to the  Workshop of Git and Github. The Student attend this workshop in discipline manner </h1>
 </body>
 </html>
